# vcxproj-cmake-sharing-example

./: .gitignore  CMakeLists.txt  Project.vcxproj  README.md  SharedFiles.txt
src/: c.cpp  cmake-only.cpp  d.cpp  main.cpp  msvc-only.cpp
